--- a/home-2.html
+++ b/home-2.html
@@ -1,28 +1,131 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Home-2</title>
-	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="#" />	
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Home-2</title>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" href="#" />   
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- Bootstrap CSS-->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <!-- Bootstrap CSS-->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-	<!-- Font-Awesome -->
-	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
-	
-	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+  <!-- Font-Awesome -->
+  <link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
+
+  <!-- Main Styles -->
+  <link rel="stylesheet" type="text/css" href="css/styles-2.css">
 </head>
 <body>
 
+<!-- Navbar START -->
+<header class="navMenu">
+  <div class="container">
+    <nav>
+      <div class="logo"></div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Partners</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  </div>
+</header>
+<!-- Navbar END -->
+
+<!-- Main START -->
+<main>
+<!-- Hero START-->
+<section id="hero">
+  <div class="container">
+    <div class="row myrow">
+      <div class="heroinfo col-md-7 col-lg-6 col-xl-5">
+        <h1 class="herotitle">Driving meaningful change <br> through technology <span>&</span> design</h1>
+        <img src="img/content/line-1.png" class="line">
+        <p class="herop">As a full-suite branding and marketing agency, we will help bring your vision to life, transform it into a stunning brand, and communicate it to the world loud and clear.</p>
+        <a href="#" class="btn btn-outline-secondary btnstyle">Explore</a>
+      </div>
+      <div class="heropic col-md-5 col-lg-6 col-xl-6 offset-xl-1">
+        <img src="img/content/image-43.png" class="imagemask" alt="imgmask">
+      </div>
+    </div>
+  </div>
+  <img src="img/content/ellipse-63.png" class="elips-1 elipse-pos">
+  <img src="img/content/ellipse-64.png" class="elips-2 elipse-pos">
+</section>
+<!-- Hero END-->
+
+<!-- Info START -->
+<section id="info">
+  <div class="infobg">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12 col-lg-3">
+          <div class="infobox">
+            <div class="back cl1">
+              <img src="img/icon/group-493.png" class="infoicon">
+            </div>
+              <h2>UX DESIGN</h2>
+              <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+              <a href="#"><span class="fcl1">More...</span></a>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-3">
+          <div class="row">
+            <div class="col-12">
+              <div class="infobox">
+                <div class="back cl2">
+                  <img src="img/icon/group-494.png" class="infoicon">
+                </div>
+                  <h2>DEVELOPMENT</h2>
+                  <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+                  <a href="#"><span class="fcl2">More...</span></a>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="infobox">
+                <div class="back cl3">
+                  <img src="img/icon/group-495.png" class="infoicon">
+                </div>
+                  <h2>BRANDING</h2>
+                  <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+                  <a href="#"><span class="fcl3">More...</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-5 infoboxlg">
+          <h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
+          <h2>
+            <span>Digital creators</span> <br> & Strategists
+          </h2>
+          <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+          <p>We help businesses identify and communicate those values to their customers.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Info END-->
+
+</main>
+<!-- Main END -->
 
 <!-- Jquery -->
 <script src="js/jquery.min.js"></script>
-
-<!-- Main JS -->
-<script src="js/main.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Popper -->
+<script src="js/popper.min.js"></script>
+<!-- Main-2 JS -->
+<script src="js/main-2.js"></script>
 
 </body>
 </html>
