--- a/home-2.html
+++ b/home-2.html
@@ -13,6 +13,12 @@
   <link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
 
   <!-- Main Styles -->
+  <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+
+  <!-- Main Styles -->
+  <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+  
+  <!-- Main Styles -->
   <link rel="stylesheet" type="text/css" href="css/styles-2.css">
 </head>
 <body>
@@ -115,6 +121,34 @@
 </section>
 <!-- Info END-->
 
+<!-- Brends START -->
+<section id="brends">
+  <div class="container">
+    <div class="row">
+      <div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
+        <div class="item brends-item">
+          <img src="img/brends/brend-1.png">
+        </div>
+        <div class="item brends-item">
+          <img src="img/brends/brend-2.png">
+        </div>
+        <div class="item brends-item">
+          <img src="img/brends/brend-3.png">
+        </div>
+        <div class="item brends-item">
+          <img src="img/brends/brend-4.png">
+        </div>
+        <div class="item brends-item">
+          <img src="img/brends/brend-5.png">
+        </div>
+        <div class="item brends-item">
+          <img src="img/brends/brend-6.png">
+        </div>
+    </div>
+  </div>
+</section>
+<!-- Brends END -->
+
 </main>
 <!-- Main END -->
 
@@ -124,6 +158,8 @@
 <script src="js/bootstrap.min.js"></script>
 <!-- Popper -->
 <script src="js/popper.min.js"></script>
+<!-- Include js plugin -->
+<script src="js/owl.carousel.min.js"></script>
 <!-- Main-2 JS -->
 <script src="js/main-2.js"></script>
 
