--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 		<!-- Innovative START -->
 		<section id="innovative">
 				<div class="container">
-						<div class="row align-items-center">
-								<div class="col-md-12 col-lg-5">
+						<div class="row">
+								<div class="col-sm-12 col-lg-5">
 										<h4 class="innovative-title textcolor s-mrb-20">Innovative</h4>
 										<h3 class="s-title s-mrb-30">Enhancing your success</h3>
 										<p class="s-subtitle text-left">Here is a subscription-based software, which means you just pay an annual subscription fee to use the software, in the cloud or on your own servers.</p>
@@ -122,6 +122,17 @@
 												<li class="s-subtitle"><i class="fas fa-check textcolor"></i>Create and manage business process</li>
 										</ul>
 								</div>
+        <div class="col-sm-12 col-lg-6 offset-lg-1 cir-divs">
+          <div class="bg-big">
+           <img src="img/content/mask-big.png">
+          </div>
+          <div class="bg-medium">
+           <img src="img/content/mask-medium.png">
+          </div>
+          <div class="bg-smoll">
+           <img src="img/content/mask-smoll.png">
+          </div>
+        </div>
 						</div>
 				</div>
 		</section>
