--- a/home-2.html
+++ b/home-2.html
@@ -149,6 +149,38 @@
 </section>
 <!-- Brends END -->
 
+<!-- Player START -->
+<section id="player">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12 col-lg-6">
+          <div class="video-element" id="video-element">
+            <div class="video-element__poster" id="video-poster">
+              <img src="img/icon/play.png" class="btn-play">
+              <p>Creative Studio, <br> Technology </p>
+            </div>
+          </div>
+          <script type="text/template" id="video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </script>
+        </div>
+        <div class="col-md-12 col-lg-5 player-text">
+          <h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
+          <h2>
+            <span>Digital creators</span> <br> & Strategists
+          </h2>
+          <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+        </div>
+      </div>
+    </div>
+</section>
+<!-- Player END-->
+
+<!-- Services START -->
+<section id="services">
+</section>
+<!-- Services END-->
+
 </main>
 <!-- Main END -->
 
