--- a/home-2.html
+++ b/home-2.html
@@ -1,199 +1,229 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
-  <title>Home-2</title>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" href="#" />   
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-  <!-- Bootstrap CSS-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-
-  <!-- Font-Awesome -->
-  <link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
-
-  <!-- Main Styles -->
-  <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
-
-  <!-- Main Styles -->
-  <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
-  
-  <!-- Main Styles -->
-  <link rel="stylesheet" type="text/css" href="css/styles-2.css">
+	<title>Home-2</title>
+	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="#" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- Bootstrap CSS-->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<!-- Font-Awesome -->
+	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/styles-2.css">
 </head>
+
 <body>
-
-<!-- Navbar START -->
-<header class="navMenu">
-  <div class="container">
-    <nav>
-      <div class="logo"></div>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Partners</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
-    </nav>
-  </div>
-</header>
-<!-- Navbar END -->
-
-<!-- Main START -->
-<main>
-<!-- Hero START-->
-<section id="hero">
-  <div class="container">
-    <div class="row myrow">
-      <div class="heroinfo col-md-7 col-lg-6 col-xl-5">
-        <h1 class="herotitle">Driving meaningful change <br> through technology <span>&</span> design</h1>
-        <img src="img/content/line-1.png" class="line">
-        <p class="herop">As a full-suite branding and marketing agency, we will help bring your vision to life, transform it into a stunning brand, and communicate it to the world loud and clear.</p>
-        <a href="#" class="btn btn-outline-secondary btnstyle">Explore</a>
-      </div>
-      <div class="heropic col-md-5 col-lg-6 col-xl-6 offset-xl-1">
-        <img src="img/content/image-43.png" class="imagemask" alt="imgmask">
-      </div>
-    </div>
-  </div>
-  <img src="img/content/ellipse-63.png" class="elips-1 elipse-pos">
-  <img src="img/content/ellipse-64.png" class="elips-2 elipse-pos">
-</section>
-<!-- Hero END-->
-
-<!-- Info START -->
-<section id="info">
-  <div class="infobg">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-12 col-lg-3">
-          <div class="infobox">
-            <div class="back cl1">
-              <img src="img/icon/group-493.png" class="infoicon">
-            </div>
-              <h2>UX DESIGN</h2>
-              <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
-              <a href="#"><span class="fcl1">More...</span></a>
-          </div>
-        </div>
-        <div class="col-md-12 col-lg-3">
-          <div class="row">
-            <div class="col-12">
-              <div class="infobox">
-                <div class="back cl2">
-                  <img src="img/icon/group-494.png" class="infoicon">
-                </div>
-                  <h2>DEVELOPMENT</h2>
-                  <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
-                  <a href="#"><span class="fcl2">More...</span></a>
-              </div>
-            </div>
-            <div class="col-12">
-              <div class="infobox">
-                <div class="back cl3">
-                  <img src="img/icon/group-495.png" class="infoicon">
-                </div>
-                  <h2>BRANDING</h2>
-                  <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
-                  <a href="#"><span class="fcl3">More...</span></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12 col-lg-5 infoboxlg">
-          <h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
-          <h2>
+	<!-- Navbar START -->
+	<header class="navMenu">
+		<div class="container">
+			<nav>
+				<div class="logo"></div>
+				<ul class="nav-links">
+					<li><a href="#">Home</a>
+					</li>
+					<li><a href="#">About</a>
+					</li>
+					<li><a href="#">Services</a>
+					</li>
+					<li><a href="#">Portfolio</a>
+					</li>
+					<li><a href="#">Blog</a>
+					</li>
+					<li><a href="#">Partners</a>
+					</li>
+				</ul>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<!-- Navbar END -->
+	<!-- Main START -->
+	<main>
+		<!-- Hero START-->
+		<section id="hero">
+			<div class="container">
+				<div class="row myrow">
+					<div class="heroinfo col-md-7 col-lg-6 col-xl-5">
+						<h1 class="herotitle">Driving meaningful change <br> through technology <span>&</span> design</h1>
+						<img src="img/content/line-1.png" class="line">
+						<p class="herop">As a full-suite branding and marketing agency, we will help bring your vision to life, transform it into a stunning brand, and communicate it to the world loud and clear.</p> <a href="#" class="btn btn-outline-secondary btnstyle">Explore</a>
+					</div>
+					<div class="heropic col-md-5 col-lg-6 col-xl-6 offset-xl-1">
+						<img src="img/content/image-43.png" class="imagemask" alt="imgmask">
+					</div>
+				</div>
+			</div>
+			<img src="img/content/ellipse-63.png" class="elips-1 elipse-pos">
+			<img src="img/content/ellipse-64.png" class="elips-2 elipse-pos">
+		</section>
+		<!-- Hero END-->
+		<!-- Info START -->
+		<section id="info">
+			<div class="infobg">
+				<div class="container">
+					<div class="row align-items-center">
+						<div class="col-md-12 col-lg-3">
+							<div class="infobox">
+								<div class="back cl1">
+									<img src="img/icon/group-493.png" class="infoicon">
+								</div>
+								<h2>UX DESIGN</h2>
+								<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
+							</div>
+						</div>
+						<div class="col-md-12 col-lg-3">
+							<div class="row">
+								<div class="col-12">
+									<div class="infobox">
+										<div class="back cl2">
+											<img src="img/icon/group-494.png" class="infoicon">
+										</div>
+										<h2>DEVELOPMENT</h2>
+										<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl2">More...</span></a>
+									</div>
+								</div>
+								<div class="col-12">
+									<div class="infobox">
+										<div class="back cl3">
+											<img src="img/icon/group-495.png" class="infoicon">
+										</div>
+										<h2>BRANDING</h2>
+										<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl3">More...</span></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-12 col-lg-5 infoboxlg">
+							<h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
+							<h2>
             <span>Digital creators</span> <br> & Strategists
           </h2>
-          <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
-          <p>We help businesses identify and communicate those values to their customers.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Info END-->
-
-<!-- Brends START -->
-<section id="brends">
-  <div class="container">
-    <div class="row">
-      <div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
-        <div class="item brends-item">
-          <img src="img/brends/brend-1.png">
-        </div>
-        <div class="item brends-item">
-          <img src="img/brends/brend-2.png">
-        </div>
-        <div class="item brends-item">
-          <img src="img/brends/brend-3.png">
-        </div>
-        <div class="item brends-item">
-          <img src="img/brends/brend-4.png">
-        </div>
-        <div class="item brends-item">
-          <img src="img/brends/brend-5.png">
-        </div>
-        <div class="item brends-item">
-          <img src="img/brends/brend-6.png">
-        </div>
-    </div>
-  </div>
-</section>
-<!-- Brends END -->
-
-<!-- Player START -->
-<section id="player">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-12 col-lg-6">
-          <div class="video-element" id="video-element">
-            <div class="video-element__poster" id="video-poster">
-              <img src="img/icon/play.png" class="btn-play">
-              <p>Creative Studio, <br> Technology </p>
-            </div>
-          </div>
-          <script type="text/template" id="video">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </script>
-        </div>
-        <div class="col-md-12 col-lg-5 player-text">
-          <h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
-          <h2>
+							<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+							<p>We help businesses identify and communicate those values to their customers.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Info END-->
+		<!-- Brends START -->
+		<section id="brends">
+			<div class="container">
+				<div class="row">
+					<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
+						<div class="item brends-item">
+							<img src="img/brends/brend-1.png">
+						</div>
+						<div class="item brends-item">
+							<img src="img/brends/brend-2.png">
+						</div>
+						<div class="item brends-item">
+							<img src="img/brends/brend-3.png">
+						</div>
+						<div class="item brends-item">
+							<img src="img/brends/brend-4.png">
+						</div>
+						<div class="item brends-item">
+							<img src="img/brends/brend-5.png">
+						</div>
+						<div class="item brends-item">
+							<img src="img/brends/brend-6.png">
+						</div>
+					</div>
+				</div>
+		</section>
+		<!-- Brends END -->
+		<!-- Player START -->
+		<section id="player">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-md-12 col-lg-6">
+						<div class="video-element" id="video-element">
+							<div class="video-element__poster" id="video-poster">
+								<img src="img/icon/play.png" class="btn-play">
+								<p>Creative Studio,
+									<br>Technology</p>
+							</div>
+						</div>
+						<script type="text/template" id="video">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</script>
+					</div>
+					<div class="col-md-12 col-lg-5 player-text">
+						<h4>CUTTING-EDGE BRAND EXPERIENCES FOR COMPANIES</h4>
+						<h2>
             <span>Digital creators</span> <br> & Strategists
           </h2>
-          <p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
-        </div>
-      </div>
-    </div>
-</section>
-<!-- Player END-->
-
-<!-- Services START -->
-<section id="services">
-</section>
-<!-- Services END-->
-
-</main>
-<!-- Main END -->
-
-<!-- Jquery -->
-<script src="js/jquery.min.js"></script>
-<!-- Bootstrap -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Popper -->
-<script src="js/popper.min.js"></script>
-<!-- Include js plugin -->
-<script src="js/owl.carousel.min.js"></script>
-<!-- Main-2 JS -->
-<script src="js/main-2.js"></script>
-
+						<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Player END-->
+		<!-- Services START -->
+		<section id="services">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-sm-12 col-md-7 serives-title col-centered">
+						<h3>Crafting delightful experiences through meticulous attention</h3>
+						<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+					</div>
+				</div>
+				<div class="row s-mrt-80">
+					<div class="col-sm-12 col-md-6 services-image-box">
+						<div class="services-image-1">
+							<img src="img/content/services-image-1.png">
+						</div>
+						<div class="services-image-2">
+							<img src="img/content/services-image-2.png">
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 services-tabs">
+						<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+							<li class="nav-item"> <a class="nav-link active" id="pills-strategy-tab" data-toggle="pill" href="#pills-strategy" role="tab" aria-controls="pills-strategy" aria-selected="true">STRATEGY & BRANDING</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link" id="pills-digital-tab" data-toggle="pill" href="#pills-digital" role="tab" aria-controls="pills-digital" aria-selected="false">DIGITAL & DEVELOPMENT</a>
+							</li>
+							<li class="nav-item"> <a class="nav-link" id="pills-studio-tab" data-toggle="pill" href="#pills-studio" role="tab" aria-controls="pills-studio" aria-selected="false">STUDIO & STORIES</a>
+							</li>
+						</ul>
+						<div class="tab-content" id="pills-tabContent">
+							<div class="tab-pane fade show active col-sm-12 col-md-9" id="pills-strategy" role="tabpanel" aria-labelledby="pills-strategy-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+							</div>
+							<div class="tab-pane fade" id="pills-digital" role="tabpanel" aria-labelledby="pills-digital-tab">...</div>
+							<div class="tab-pane fade" id="pills-studio" role="tabpanel" aria-labelledby="pills-studio-tab">...</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Services END-->
+	</main>
+	<!-- Main END -->
+	<!-- Jquery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Popper -->
+	<script src="js/popper.min.js"></script>
+	<!-- Include js plugin -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Main-2 JS -->
+	<script src="js/main-2.js"></script>
 </body>
+
 </html>
