--- a/home-2.html
+++ b/home-2.html
@@ -203,15 +203,38 @@
 								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
 								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
 								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
 							</div>
-							<div class="tab-pane fade" id="pills-digital" role="tabpanel" aria-labelledby="pills-digital-tab">...</div>
-							<div class="tab-pane fade" id="pills-studio" role="tabpanel" aria-labelledby="pills-studio-tab">...</div>
+							<div class="tab-pane fade col-sm-12 col-md-9" id="pills-digital" role="tabpanel" aria-labelledby="pills-digital-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
+							</div>
+							<div class="tab-pane fade col-sm-12 col-md-9" id="pills-studio" role="tabpanel" aria-labelledby="pills-studio-tab">
+								<h3 class="s-mrt-60">Creating strong imagery</h3>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<p class="s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+								<p class="s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+								<button class="s-btn-2-sm btnstyle-2 s-mrt-30">Learn more</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Services END-->
+		<!-- Specialize START -->
+		<section id="specialize">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-6 specialize-text"></div>
+					<div class="col-sm-12 col-md-6 specialize-boxs"></div>
+				</div>
+			</div>
+		<section>
+		<!-- Specialize END-->
 	</main>
 	<!-- Main END -->
 	<!-- Jquery -->
