--- a/home-2.html
+++ b/home-2.html
@@ -228,13 +228,42 @@
 		<!-- Specialize START -->
 		<section id="specialize">
 			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-md-6 specialize-text"></div>
-					<div class="col-sm-12 col-md-6 specialize-boxs"></div>
+				<div class="row align-items-center">
+					<div class="col-sm-12 col-md-6 col-lg-4 specialize-text">
+						<h4 class="h-2-style-text-color">WE ARE CREATIVE STUDION FOUNDED IN NYC</h4>
+						<h2 class="h-2-style-text-bold"><span>We specialize in</span> <br> buildind brands</h2>
+						<p class="h-2-style-text-par s-mrt-30">We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p>
+						<p class="h-2-style-text-par s-mrt-30">We help businesses identify and communicate those values to their customers.</p>
+						<button class="s-btn-2-sm h-2-btn-style s-mrt-30">Learn more</button>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-7 specialize-boxs">
+						<div class="medium-cir cir">
+							<p class="cir-count">8+</p>
+							<p class="cir-text">Offices</p>
+						</div>
+						<div class="smoll-cir cir">
+								<p class="cir-count">120</p>
+								<p class="cir-text">Clienrs</p>
+						</div>
+						<div class="big-cir cir">
+								<p class="cir-count">90</p>
+								<p class="cir-text">Employees</p>
+						</div>
+					</div>
 				</div>
 			</div>
-		<section>
+		</section>
 		<!-- Specialize END-->
+		<!-- Counter START -->
+		<section id="counter">
+			<div class="container">
+				<div class="row">
+
+				</div>
+			</div>
+		</section>
+		<!-- Counter END-->
+
 	</main>
 	<!-- Main END -->
 	<!-- Jquery -->
