--- a/home-2.html
+++ b/home-2.html
@@ -585,6 +585,76 @@
 			</div>
 		</section>
 		<!-- Blog END -->
+		<!-- Footer START -->
+		<footer id="footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-md-4 col-lg-3">
+						<p class="footer-title"><span>ABOUT</span> COMPANY</p>
+						<p class="s-mrt-30 about-comp">
+							What are you working on? Dribbble is a community of designers sharing screenshots of their work, process, and projects.
+						</p>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 mr">
+						<p class="footer-title"><span>WE</span> OFFER</p>
+						<ul class="foot-list">
+							<li><a href="#">Business Consultation</a>
+							</li>
+							<li><a href="#">Strategy Preparing</a>
+							</li>
+							<li><a href="#">Markeitng</a>
+							</li>
+							<li><a href="#">Sales & Monitoring</a>
+							</li>
+							<li><a href="#">Graphic Design</a>
+							</li>
+							<li><a href="#">Development</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 mr">
+						<p class="footer-title"><span>WE</span> SUGGEST</p>
+						<ul class="foot-list">
+							<li><a href="#">About us</a>
+							</li>
+							<li><a href="#">Portfolio</a>
+							</li>
+							<li><a href="#">Team</a>
+							</li>
+							<li><a href="#">News</a>
+							</li>
+							<li><a href="#">Partners</a>
+							</li>
+							<li><a href="#">Contacts</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-sm-12 col-md-12 col-lg-3 col-clone">
+						<h3 class="subscribe"><span>SUBSCRIBE NEWS</span> <br> & STAY UPDATED</h3>
+						<div class="input-group">
+							<input type="email" class="form-control news-input" placeholder="Your email">
+							<span class="input-group-btn">
+								<button class="send-req" type="submit">
+									<img src="img/icon/arrow-right-white.png" class="news-btn-send">
+								</button>
+							</span>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</footer>
+		<section id="copy">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<p>© 2020 SpecThemes. All Rights Reserved.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Footer END -->
+
 	</main>
 	<!-- Main END -->
 	<!-- Jquery -->
