--- a/home-3.html
+++ b/home-3.html
@@ -11,16 +11,27 @@
 	<!-- Font-Awesome -->
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/styles-3.css">
 </head>
 
 <body>
 	<!-- Navbar START -->
 	<!-- Navbar END -->
+
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
-	<!-- Main JS -->
-	<script src="js/main.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Popper -->
+	<script src="js/popper.min.js"></script>
+	<!-- Include js plugin -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Main-2 JS -->
+	<script src="js/main-3.js"></script>
 </body>
 
 </html>
