--- a/home-3.html
+++ b/home-3.html
@@ -20,8 +20,196 @@
 
 <body>
 	<!-- Navbar START -->
+	<header class="navMenu">
+		<div class="container">
+			<nav>
+				<div class="logo"></div>
+				<ul class="nav-links">
+					<li><a href="#" class="active">Home</a>
+					</li>
+					<li><a href="#">About</a>
+					</li>
+					<li><a href="#">Services</a>
+					</li>
+					<li><a href="#">Portfolio</a>
+					</li>
+					<li><a href="#">Blog</a>
+					</li>
+					<li><a href="#">Partners</a>
+					</li>
+					<li><a href="#" class="linkbtn">Contact us</a>
+					</li>
+				</ul>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</nav>
+		</div>
+	</header>
 	<!-- Navbar END -->
+	<!-- Hero START -->
+	<section id="hero">
+		<div class="container">
+			<div class="row">
 
+			</div>
+		</div>
+	</section>
+	<!-- Hero END -->
+	<!-- Services START -->
+	<section id="services">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-8 col-centered">
+					<h3 class="home-3-title-color">OTSOURCED CHIEF INVISTMENT OFFICIER</h3>
+					<h4 class="home-3-title s-mrt-20">Gain a significiant strategic advantage</h4>
+				</div>
+				<div class="col-sm-12 col-md-6 col-centered s-mrb-50">
+					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="services-item col-sm-12 col-md-4">
+					<div class="services-item-box">
+						<img src="img/icon/home-3-sercices-1.png" alt="" class="s-mrt-45">
+						<h4 class="s-mrt-30">CHIEF INVESTMENT OFFICER</h4>
+						<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
+						<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+				<div class="services-item col-sm-12 col-md-4">
+					<div class="services-item-box">
+						<img src="img/icon/home-3-sercices-2.png" alt="" class="s-mrt-45">
+						<h4 class="s-mrt-30">ADVISORY CONSULTING</h4>
+						<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
+						<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+				<div class="services-item col-sm-12 col-md-4">
+					<div class="services-item-box">
+						<img src="img/icon/home-3-sercices-3.png" alt="" class="s-mrt-45">
+						<h4 class="s-mrt-30">SINGLE STRATEGY SOLUTIONS</h4>
+						<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
+						<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Services END -->
+	<!-- Solution START -->
+	<section id="solution">
+		<div class="row align-items-center">
+			<div class="col-sm-12 col-md-6 solution-box">
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-3 offset-lg-1 solution-text">
+				<h3>We identify your requirmenets and design an ideal relationship structure to fit your needs</h3>
+				<p class="s-mrt-25">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. We leverage brand intelligence to develop meaningful content and engage people
+					with actionable brand experiences that spark human connection.</p>
+				<p class="s-mrt-25 s-mrb-35">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+				<a href="#" class="btn h3-btnstyle">OUR SOLUTIONS</a>
+			</div>
+		</div>
+	</section>
+	<!-- Solution END -->
+	<!-- Pricing START -->
+	<section id="pricing">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-7 col-centered">
+					<h3 class="home-3-clone-title">Pricing plan</h3>
+					<h4 class="home-3-clone-subtitle">Simple and flexible packages for businesses</h4>
+					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+				</div>
+			</div>
+			<div class="row s-mrt-50">
+				<div class="pricing-box col-sm-12 col-md-4">
+					<p class="pricing-title">Perfect for business of all sizes</p>
+					<p class="pricing-amout">$<span class="amout">19</span>
+						<hr>
+						<ul class="pricing-item-list">
+							<li>Unlimited bandwidth and storage</li>
+							<li>Mobile optimized website SSL security</li>
+							<li>Included 2% transaction fee</li>
+						</ul>
+						<a href="#" class="price-btn">PURCHASE NOW</a>
+				</div>
+				<div class="pricing-box pricing-box-checked col-sm-12 col-md-4">
+					<p class="pricing-title">Perfect for business of all sizes</p>
+					<p class="pricing-amout">$<span class="amout">39</span>
+						<hr>
+						<ul class="pricing-item-list">
+							<li>Unlimited bandwidth and storage</li>
+							<li>Mobile optimized website SSL security</li>
+							<li>Included 2% transaction fee</li>
+						</ul>
+						<a href="#" class="btn h3-btnstyle">PURCHASE NOW</a>
+				</div>
+				<div class="pricing-box col-sm-12 col-md-4">
+					<p class="pricing-title">Perfect for business of all sizes</p>
+					<p class="pricing-amout">$<span class="amout">59</span>
+						<hr>
+						<ul class="pricing-item-list">
+							<li>Unlimited bandwidth and storage</li>
+							<li>Mobile optimized website SSL security</li>
+							<li>Included 2% transaction fee</li>
+						</ul>
+						<a href="#" class="price-btn">PURCHASE NOW</a>
+				</div>
+			</div>
+		</div>
+		</div>
+	</section>
+	<!-- Pricing END -->
+	<!-- Portfolio START -->
+	<section id="portfolio">
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="row">
+					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-4.png');">
+						<div class="overlay-portfolio">
+							<a href="#">
+								<h3>Project name : A new concept in <br> business planning</h3>
+							</a>
+							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-5.png');">
+						<div class="overlay-portfolio">
+							<a href="#">
+								<h3>Project name : A new concept in <br> business planning</h3>
+							</a>
+							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-6.png');">
+						<div class="overlay-portfolio">
+							<a href="#">
+								<h3>Project name : A new concept in <br> business planning</h3>
+							</a>
+							<a href="#" class="port-open"><i class="fas fa-arrow-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Portfolio END -->
+	<!-- Integrity START -->
+	<section id="integrity">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-7 col-centered">
+					<h3 class="home-3-clone-title">Trust & Integrity:</h3>
+					<h4 class="home-3-clone-subtitle">Our recipe for your business success</h4>
+					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Integrity END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap -->
