--- a/home-3.html
+++ b/home-3.html
@@ -37,7 +37,7 @@
 					</li>
 					<li><a href="#">Partners</a>
 					</li>
-					<li><a href="#" class="linkbtn">Contact us</a>
+					<li><a href="#" class="linkbtn">GET A QUOTE</a>
 					</li>
 				</ul>
 				<div class="burger">
@@ -52,8 +52,28 @@
 	<!-- Hero START -->
 	<section id="hero">
 		<div class="container">
-			<div class="row">
-
+			<div class="row h-100 align-items-center justify-content-center">
+				<div class="col-sm-12 col-md-6 col-lg-5 hero-info col-centered">
+					<h3>WE COLLABORATE TO DISCOVER YOUR NEEDS</h3>
+					<h2>We connect people <span>together.</span></h2>
+					<p>We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 offset-lg-1 hero-contact col-centered">
+					<h2>MAKE AN APPOINTEMENT</h2>
+					<p>Trusted help to businesses and individuals to make better business decisions</p>
+					<form class="contact-form">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="COMPANY NAME">
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="PHONE NUMBER">
+						</div>
+						<div class="form-group">
+							<input type="email" class="form-control" placeholder="YOUR EMAIL">
+						</div>
+						<a href="" class="form-send">GO <i class="fas fa-arrow-right"></i></a>
+					</form>
+				</div>
 			</div>
 		</div>
 	</section>
