--- a/home-3.html
+++ b/home-3.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo"></div>
 				<ul class="nav-links">
-					<li><a href="#" class="active">Home</a>
+					<li><a href="#" class="active-item">Home</a>
 					</li>
 					<li><a href="#">About</a>
 					</li>
@@ -227,9 +227,123 @@
 					<p class="home-3-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
 				</div>
 			</div>
+			<div class="row s-mrt-50">
+				<div class="col-sm-12 col-md-5 integrity-info">
+					<h2>Get a smarter single strategy solution</h2>
+					<p>We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection. </p>
+					<ul class="integrity-list s-mrb-60">
+						<li><i class="fas fa-check integrity-icon"></i> We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</li>
+						<li><i class="fas fa-check integrity-icon"></i> We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</li>
+					</ul>
+					<a href="#" class="integrity-btn">CONTACT US</a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Integrity END -->
+	<!-- Count START -->
+	<section id="count">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-sm-12">
+					<p class="count-title">A tradition of exceptional service</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item s-mrt-40">
+					<img src="img/icon/h3-count-1.png" alt="">
+					<h3>20</h3>
+					<p>Years of experience</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item s-mrt-40">
+					<img src="img/icon/h3-count-2.png" alt="">
+					<h3>3k</h3>
+					<p>Business accounts</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item s-mrt-40">
+					<img src="img/icon/h3-count-3.png" alt="">
+					<h3>50+</h3>
+					<p>Projects delievered</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item s-mrt-40">
+					<img src="img/icon/h3-count-4.png" alt="">
+					<h3>100%</h3>
+					<p>Customers satisfaction</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Count END -->
+	<!-- Feedback START -->
+	<section id="feedback">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 feed-top">
+					<h3>What our customers think</h3>
+					<h2>See what our customers say about services we provided</h2>
+				</div>
+			</div>
+		</div>
+		<div id="owl-feedback" class="owl-carousel owl-theme">
+			<div class="item feedback-item">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-sm-12 col-md-3 col-centered">
+							<img src="img/content/feedback-1.png" alt="" class="feed-img">
+						</div>
+						<div class="col-sm-12 col-md-5 offset-md-1 col-centered wol-hid">
+							<h3 class="feed-title">PROFESSIONAL WORLDWIDE TEAM </h3>
+							<p class="feed-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+							<p class="feed-author"><span>Eloise Smith,</span> USA Customer</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="item feedback-item">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-sm-12 col-md-3 col-centered">
+							<img src="img/content/feedback-1.png" alt="" class="feed-img">
+						</div>
+						<div class="col-sm-12 col-md-5 offset-md-1 col-centered wol-hid">
+							<h3 class="feed-title">PROFESSIONAL WORLDWIDE TEAM </h3>
+							<p class="feed-text s-mrt-30">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+							<p class="feed-author"><span>Eloise Smith,</span> USA Customer</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Feedback END -->
+	<!-- Brends START -->
+	<section id="brends">
+		<div class="container">
+			<div class="row">
+				<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
+					<div class="item brends-item">
+						<img src="img/brends/brend-1.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-2.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-3.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-4.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-5.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-6.png">
+					</div>
+				</div>
+			</div>
+	</section>
+	<!-- Brends END -->
+	<section id="blog">
+
+	</section>
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap -->
