--- a/home-3.html
+++ b/home-3.html
@@ -341,9 +341,126 @@
 			</div>
 	</section>
 	<!-- Brends END -->
+	<!-- Blog START -->
+	<section id="blog-layer"></section>
 	<section id="blog">
-
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-8 col-centered">
+					<h3 class="home-3-clone-title">Featured news and insights</h3>
+					<h4 class="home-3-clone-subtitle">Our latest thinking on the issues that matter most in business</h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div class="blob-box" style="background: linear-gradient(101.98deg,  rgba(0, 0, 0, 0.51) 1.23%, rgba(0, 0, 0, 0.51) 99.16%), url('img/blog/post-5.png')">
+						<a href="#">
+							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
+						</a>
+						<a href="#">
+							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="blob-box" style="background: linear-gradient(101.98deg,  rgba(0, 0, 0, 0.51) 1.23%, rgba(0, 0, 0, 0.51) 99.16%), url('img/blog/post-6.png')">
+						<a href="#">
+							<p class="blog-cat">BUSINESS <span>- March 2020</span></p>
+						</a>
+						<a href="#">
+							<h3 class="blog-title">Seven ways to make sure work meetings are not a waste time</h3>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
+	<!-- Blog END -->
+	<!-- Footer START -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-1 foot-col">
+					<h3>ABOUT US</h3>
+					<p class="s-mrt-90">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. </p>
+					<a href="#" class="s-mrt-30">Read more</a>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-2 offset-lg-1 foot-col-2 foot-col">
+					<h3>SERVICES</h3>
+					<ul>
+						<li><a href="#">Marketing consulting</a>
+						</li>
+						<li><a href="#">Business audit</a><span class="new">NEW</span>
+						</li>
+						<li><a href="#">Financial advisory</a>
+						</li>
+						<li><a href="#">Recruting services</a>
+						</li>
+						<li><a href="#">Branding and PR</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-3 foot-col">
+					<h3>USEFUL RESOURCES</h3>
+					<ul>
+						<li><a href="#">Partners</a>
+						</li>
+						<li><a href="#">Successful Cases</a>
+						</li>
+						<li><a href="#">Testimonials</a>
+						</li>
+						<li><a href="#">Portfolio</a>
+						</li>
+						<li><a href="#">Careers</a><span class="new">WE’RE HIRING</span>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-4 foot-col">
+					<h3>USEFUL RESOURCES</h3>
+					<div class="input-group input-send">
+						<input type="email" class="form-control email-input" placeholder="Your email">
+						<span class="input-group-btn">
+							<button class="send-email" type="submit">SEND</button>
+						</span>
+					</div>
+					<ul>
+						<li><a href="#">Contact us</a>
+						</li>
+						<li><a href="#">Terms & Conditions</a>
+						</li>
+						<li><a href="#">Privacy Policy</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<section id="footer-bottom">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-sm-6 col-md-6">
+					<p>© 2020 SpecThemes. All Rights Reserved.</p>
+				</div>
+				<div class="col-sm-6 col-md-6">
+					<ul class="social-footer">
+						<li>
+							<a href="#"> <i class="fab fa-twitter iconhover"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#"> <i class="fab fa-linkedin-in iconhover"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#"> <i class="fab fa-facebook-f iconhover"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap -->
